--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url= jdbc:postgresql://10.100.176.169:5432/postgres?currentSchema=REF_K2
-spring.datasource.username=mgharbi
-spring.datasource.password=mgharbi
+spring.datasource.username=
+spring.datasource.password=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL82Dialect
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
